Initialize project with Vue, Tailwind CSS, and Redis storage; add landing layout and components

--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-  "name": "nuxt-app",
+  "name": "handyboys",
+  "version": "1.0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "build:azure": "npx nuxi build --preset=azure",
+    "dev": "cross-env NODE_OPTIONS=--max-old-space-size=4096 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "dependencies": {
-    "nuxt": "^3.15.0",
-    "vue": "latest",
-    "vue-router": "latest"
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
+  "devDependencies": {
+    "@nuxt/icon": "1.10.3",
+    "@nuxt/image": "1.9.0",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/kinde": "^0.1.11",
+    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@vue/compiler-ssr": "^3.5.13",
+    "@vue/shared": "^3.5.13",
+    "ioredis": "^5.4.2",
+    "nuxi": "^3.20.0",
+    "nuxt": "^3.15.3",
+    "nuxt-icon": "^0.6.8",
+    "unstorage": "^1.14.4",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   }
 }
