--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,19 +4,38 @@
 	"name": "Node.js & TypeScript",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-
+	"features": {
+		"ghcr.io/devcontainers/features/docker-in-docker": {},
+		"ghcr.io/itsmechlark/features/redis-server:1": {
+			"version": "latest"
+		}
+	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
+	"mounts": [
+		"source=${localEnv:HOME}/.ssh,target=/home/node/.ssh,type=bind,consistency=cached",
+		"source=${localEnv:HOME}/.gitconfig,target=/home/node/.gitconfig-host,type=bind,consistency=cached"
+	],
 	// Use 'postCreateCommand' to run commands after the container is created.
-    "postCreateCommand": "pnpm install && sed -i 's/ZSH_THEME=\".*\"/ZSH_THEME=\"bira\"/' ~/.zshrc",
-
+	"postCreateCommand": "sed -i 's/ZSH_THEME=.*/ZSH_THEME=\"bira\"/' ~/.zshrc && cp ~/.gitconfig-host ~/.gitconfig", //&& git config --global gpg.format ssh && git config --global user.signingkey ~/.ssh/id_rsa.pub",
 	// Configure tool-specific properties.
-	// "customizations": {},
-
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Nuxtr.nuxt-vscode-extentions",
+				"GitHub.copilot",
+				"GitHub.copilot-chat",
+				"GitHub.remotehub",
+				"github.vscode-github-actions",
+				"GitHub.vscode-pull-request-github",
+				"ms-vscode.vscode-github-issue-notebooks",
+				"VisualStudioExptTeam.intellicode-api-usage-examples",
+				"bradlc.vscode-tailwindcss",
+				"antfu.iconify"
+			]
+		}
+	}
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
