--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'pnpm'
         cache-dependency-path: '**/pnpm-lock.yaml'
-    - run: pnpm i
-    - run: pnpm run build
-    # - run: npm test
+    - name: Install PNPM
+      run: npm i -g pnpm
+    - name: Install & Build
+      run: pnpm i  &&  pnpm build
