--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "handyboys",
-  "version": "1.1.4",
+  "version": "1.1.3",
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "node_modules/nuxt/bin/nuxt build",
     "build:azure": "npx nuxi build --preset=azure",
     "dev": "cross-env NODE_OPTIONS=--max-old-space-size=4096 nuxt dev",
     "generate": "nuxt generate",
