--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/bx": "^1.2.2",
     "@nuxt/icon": "1.10.3",
     "@nuxt/image": "1.9.0",
+    "@nuxt/kit": "^3.15.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/kinde": "^0.1.11",
     "@nuxtjs/tailwindcss": "^6.13.1",
