--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "dev": "cross-env NODE_OPTIONS=--max-old-space-size=4096 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "npx nuxt prepare"
+    "postinstall": "node_modules/nuxt/bin/nuxt.mjs prepare"
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
-  "dependencies": {
-    "@nuxt/kit": "^3.15.3"
-  },
   "devDependencies": {
     "@iconify-json/bx": "^1.2.2",
     "@nuxt/icon": "1.10.3",
