--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "cross-env NODE_OPTIONS=--max-old-space-size=4096 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "npx nuxt prepare"
   },
   "devDependencies": {
     "@iconify-json/bx": "^1.2.2",
@@ -21,7 +21,7 @@
     "@vue/compiler-ssr": "^3.5.13",
     "@vue/shared": "^3.5.13",
     "ioredis": "^5.4.2",
-    "nuxi": "^3.20.0",
+    "nuxi": "^3.21.1",
     "nuxt": "^3.15.3",
     "unstorage": "^1.14.4",
     "vue": "^3.5.13",
