Enhance contact form functionality by adding file upload support and improving form validation; refactor API handling for multipart form data

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
 				"ms-vscode.vscode-github-issue-notebooks",
 				"VisualStudioExptTeam.intellicode-api-usage-examples",
 				"bradlc.vscode-tailwindcss",
-				"antfu.iconify"
+				"antfu.iconify",
+				"ms-vscode.vs-keybindings"
 			]
 		}
 	}
