--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/heic-convert": "^2.1.0",
     "@vue/compiler-ssr": "^3.5.13",
     "@vue/shared": "^3.5.13",
+    "flowbite": "^3.1.2",
     "heic-convert": "^2.1.0",
     "ioredis": "^5.4.2",
     "nuxi": "^3.21.1",
