--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "ioredis": "^5.4.2",
     "nuxi": "^3.21.1",
     "nuxt": "^3.15.3",
+    "sharp": "^0.33.5",
     "unstorage": "^1.14.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
-  "overrides": {
-    "sharp": "^0.33.5"
+  "pnpm": {
+    "overrides": {
+      "sharp": "0.33.5"
+    }
   }
 }
