--- a/.github/workflows/nuxthub.yml
+++ b/.github/workflows/nuxthub.yml
@@ -22,16 +22,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: 'pnpm'
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Ensure NuxtHub module is installed
         run: npx nuxthub@latest ensure
 
       - name: Build application
-        run: pnpm run build
+        run: npm run build
 
       - name: Deploy to NuxtHub
         uses: nuxt-hub/action@v1
